# infratrack-server

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
migrations/: 20250202093409_account.sql  20250205142813_project_interface_sustainable_development_goals.sql  20250206060449_project_interface_source_of_funds.sql  20250206065415_project_interface_project_type.sql  20250206080437_project_interface_incharge.sql  20250206100110_project_interface_categories.sql  20250206112304_project_interface_sectors.sql  20250206113850_project_interface_barangays.sql  20250206115158_project_interface_um.sql  20250206121454_project_interface_project_scope.sql  20250212085212_project_takers.sql  20250213045620_contractors.sql  20250213050438_contractors_alter_created_updated.sql  20250214055029_project_status.sql  20250214055926_project.sql  20250214142743_project_details.sql  20250217095252_account_information.sql  20250217101422_account_assets.sql  20250217101630_account_credentials.sql  20250223034754_account_information_update_account_assets_to_null.sql  20250224073334_project_missing_project_name.sql
src/: main.rs
src/enums/: mod.rs  response_enum.rs
src/routes/: account_route.rs  contractors_route.rs  mod.rs  project_interface_route.rs  project_route.rs  project_takers_route.rs  route.rs
src/services/: account_service.rs  contractors_service.rs  mod.rs  project_interface_service.rs  project_service.rs  project_status_service.rs  project_takers_service.rs  storage_service.rs
src/structs/: account_assets.rs  account_credentials_struct.rs  account_struct.rs  (+8 more)
(+11 files in other folders)
