[package]
name = "server"
version = "0.1.0"
edition = "2021"

# Export Bindings
# cargo test export_bindings

[dependencies]
axum = "0.8.1"
axum-analytics = "1.3.0"
chrono = { version = "0.4.39", features = ["serde"]}
dotenvy = "0.15.7"
hmac = "0.12.1"
http = "1.2.0"
jwt = "0.16.0"
magic-crypt = "4.0.1"
serde = { version = "1.0.217", features = ["derive"]}
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql", "chrono"]}
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = { version = "10.1.0", features = ["chrono-impl"] }

[dev-dependencies]
axum-test = "17.2.0"
serde_json = "1.0.138"
